--- a/index.css
+++ b/index.css
@@ -1,48 +1,46 @@
-/*======= Create a new universal selector that changes the font color to: #3C373B */
-
+* {
+  color:#3c373b;
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
-  /*=======  Update the font size to 60px and center the text */
-  font-size: 10px;
+  font-size: 60px;
+  text-align:center;
 }
 
 h2, h3, h4, h5, h6 {
   font-family: 'Gaegu', cursive;
   margin-bottom: 0;
   padding: 0 10px;
-  /*=======  Update the font size to 30px */
-  font-size: 10px;
+  font-size: 30px;
 }
 
-/*======= Create a selector for ALL p tags in the site to have the following styles:
-
+p {
 font-size: 16px;
 font-family: roboto;
 padding: 10px;
 line-height: 1.4;
+}
 
-*/
 
 
-/*======= Create a selector for ALL images in the site to have the following styles: 
-
+img {
   border-radius: 10px;
+}
 
-*/
 
 .content-row {
   display: flex;
 }
 
 .content-row div {
-  /*======= create a margin propery.  Set the value to 20px */
+ margin:20px;
 }
 
 .container {
-  /*======= create a width property. Set the value to 600px */
   margin: 0 auto;
+  width:600px;
 }
 
 .container header nav a {
@@ -54,17 +52,17 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= create a background property. Set the value to #F87B99 */
+  background:#f87b99;
   
 }
 
 .container header nav a:hover {
-/*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
+  background:white;
+  color:pink;
 }
-
-/*======= Create a selector for the about section to have the following styles:
-  margin-top: 20px;
-*/
+#about {
+  margin-top:20px;
+}
 
 .contact-section {
   border-top: 1px dashed black;
@@ -76,9 +74,9 @@ line-height: 1.4;
   margin: 0 0 10px 0;
 }
 
-/*======= Create a selector for the address tag in the contact-section class to have the following styles:
-   line-height: 2;
-*/
+address {
+  line-height: 2;
+}
 
 footer {
   width: 100%;
@@ -88,7 +86,7 @@ footer {
 
 footer .footer-content { 
   margin: 0 auto; 
-  /*======= create a width property. Set the value to 600px */
+  width:600px;
   
 }
 
@@ -100,23 +98,22 @@ footer .footer-content h3 {
 footer nav {
   display: flex;
 }
-
-/*======= Create a selector for the anchor tag in the footer to have the following styles:
+footer a {
   margin: 10px;
   color: black;
   text-decoration: underline;
-*/
+}
 
 
 footer nav a:first-child {
   margin-left: 0;
 }
 
-/*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
-  color: white;
-*/
+footer a:hover {
+   color: white;
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
-   /*======= center the text here */
+  text-align:center;
 }
